<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.fragments.PerfilFragment">

    <!-- AppBarLayout for the header -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/header"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Boton atras -->
            <ImageView
                android:id="@+id/circuloBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back"/>

            <FrameLayout
                android:id="@+id/headerPostDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Imagen de Perfil -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="40dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="5dp"
                    app:civ_circle_background_color="@color/colorGray" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <!--Nombre de Usuario-->
                <TextView
                    android:id="@+id/nameUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <!--Email de Usuario-->
                <TextView
                    android:id="@+id/emailUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mailperfil"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingStart="16dp"
                    android:paddingEnd="5dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    app:tabIndicatorColor="@color/colorPrimary"
                    app:tabIndicatorHeight="4dp" />
            </LinearLayout>

            <!-- Post Details -->
            <TextView
                android:id="@+id/lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/lugar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/categoria"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/descripcion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/duracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/duracion"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/presupuesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/presupuesto"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <!-- Lista de comentarios -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comentarios"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:paddingBottom="8dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerComentarios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Botón para eliminar post -->
            <Button
                android:id="@+id/btnEliminarPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminarpost"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- boton para dejar mensaje -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chat"
        android:contentDescription="@string/agregar"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

