<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Ojo-->
        <io.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="4dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">
            </View>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_gravity="center|top"
                android:src="@drawable/login_white"
                android:contentDescription="@string/logo">
            </ImageView>
        </io.github.florent37.shapeofview.shapes.DiagonalView>

        <!--Mail-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_mail"
                android:contentDescription="@string/imagen"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Clave-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_pass"
                android:contentDescription="@string/imagen"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!--Texto-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sincuenta"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tvRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/registrate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

