<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PostActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_post"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/upload_img"/>

            <EditText
                android:id="@+id/etUploadTitulo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/lugar"
                android:textSize="16dp"
                android:layout_gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/border"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/etUploadDescripcion"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="7dp"
                android:background="@drawable/border"
                android:hint="@string/descripcion"
                android:padding="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:padding="16dp"
                android:hint="**aca va la categoria**"
                android:textSize="16dp"
                android:layout_gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/border"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/etUploadDuracion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:padding="16dp"
                android:hint="@string/duracion"
                android:textSize="16dp"
                android:layout_gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/border"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/etUploadPresupuesto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:padding="16dp"
                android:hint="@string/presupuesto"
                android:textSize="16dp"
                android:layout_gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/border"
                android:textColorHint="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btnUploadPost"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/publicar"
                android:textSize="22dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
