<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/registro"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:src="@drawable/personblanco"
                android:layout_gravity="center|bottom"
                android:contentDescription="@string/imagen"/>
            <ImageView
                android:id="@+id/circuloBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back"/>
        </io.github.florent37.shapeofview.shapes.ArcView>

        <!--Usuario-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_usuario"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/imagen"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="text"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Mail-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_mail"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/imagen"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Pass new-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_pass"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/imagen"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!--Pass new confirm-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_pass"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/imagen"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="none">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassNewConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/registrar"
            android:textStyle="bold"
            android:textSize="20sp">
        </Button>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
